window.location.replace with invalid urls should throw https://bugs.webkit.org/show_bug.cgi?id=153121

Patch by Rob Buis <rbuis@igalia.com> on 2020-06-29
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Add a subtest to verify that location.replace throws SyntaxError if
the resulting url is not valid.

* web-platform-tests/html/browsers/history/the-location-interface/location_replace-expected.txt:
* web-platform-tests/html/browsers/history/the-location-interface/location_replace.html:

Source/WebCore:

Throw SyntaxError if the url resulting from the
location.replace operation is not valid.

Behavior matches Firefox and Chrome.

Tests: imported/w3c/web-platform-tests/html/browsers/history/the-location-interface/location_replace.html

[1] https://html.spec.whatwg.org/multipage/history.html#dom-location-replace

* page/Location.cpp:
(WebCore::Location::replace):
* page/Location.h:
* page/Location.idl:

Canonical link: https://commits.webkit.org/226512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263647 268f45cc-cd09-0410-ab3c-d52691b4dbfc