Source/WebCore/page/Location.h
@@ -46,7 +46,7 @@ public:
     String href() const;
 
     ExceptionOr<void> assign(DOMWindow& activeWindow, DOMWindow& firstWindow, const String&);
-    void replace(DOMWindow& activeWindow, DOMWindow& firstWindow, const String&);
+    ExceptionOr<void> replace(DOMWindow& activeWindow, DOMWindow& firstWindow, const String&);
     void reload(DOMWindow& activeWindow);
 
     ExceptionOr<void> setProtocol(DOMWindow& activeWindow, DOMWindow& firstWindow, const String&);
